plugins {
    id 'java'
}

group 'cn.netdiscovery'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

def libs = rootProject.ext.libraries // 库

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    implementation "org.projectlombok:lombok:${libs.lombok}"
    implementation 'org.apache.rocketmq:rocketmq-client:4.3.0'
    implementation project(":core:core")
}
